# mediabox

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  TODO  autogen.sh  configure.ac
android/remote/app/: build.gradle
android/remote/app/src/androidTest/java/com/mediabox/mediaboxremote/: ApplicationTest.java
android/remote/app/src/main/: AndroidManifest.xml
android/remote/app/src/main/java/com/mediabox/mediaboxremote/: AboutActivity.java  Device.java  DeviceListActivity.java  DiscoveryService.java  Globals.java  RemoteActivity.java  SendURLDialogFragment.java  StreamOpenDialog.java  UDPListener.java
android/remote/app/src/main/res/layout/: activity_about.xml  activity_remote.xml  device_list_item.xml
android/remote/app/src/main/res/menu/: main_menu.xml
android/remote/app/src/main/res/values/: strings.xml
android/remote/app/src/test/java/com/mediabox/mediaboxremote/: ExampleUnitTest.java
android/remote/gradle/wrapper/: gradle-wrapper.properties
include/libavbox/: audio.h  avbox.h  bluetooth.h  compiler.h  db_util.h  debug.h  file_util.h  linkedlist.h  log.h  math_util.h  proc_util.h  queue.h  settings.h  stream.h  string_util.h  syncarg.h  sysinit.h  torrent_in.h  torrent_stream.h
include/libavbox/ui/: input-bluetooth.h  input-directfb.h  input-socket.h  input-tcp.h  input.h  listview.h  player_p.h  progressview.h  textview.h  video-directfb.h  video-drm.h  video-drv.h  video-opengl.h  video-software.h  video-vc4.h  video-x11.h  video.h
sdk/: NOTES.TXT  README.TXT  buildroot  emulator  qemu-run  stats
sdk/config/arm/raspberrypi0/: buildroot  busybox  cmdline.txt  config.txt  genimage-raspberrypi0.cfg  linux  post-build.sh  post-image.sh  preimage.sh
sdk/config/arm/raspberrypi0/overlay/etc/: asound.conf  dropbear  fstab  inittab  random-seed
sdk/config/arm/raspberrypi0/overlay/root/.config/htop/: htoprc
sdk/config/x86_64/pc/: buildroot  linux
sdk/config/x86_64/qemu/: buildroot  busybox  linux  preimage.sh
sdk/config/x86_64/qemu/overlay/etc/: inittab
src/: .ycm_extra_conf.py  .ycm_extra_conf.py.in  Makefile  Makefile.am  Makefile.in  a2dp.c  a2dp.h  about.c  about.h  alsa-volume.c  alsa-volume.h  announce.c  announce.h  audio.c  audio.h  browser.c  browser.h  compiler.h  debug.h  discovery.c  discovery.h  downloads-backend.c  downloads-backend.h  downloads.c  downloads.h  file_util.c  file_util.h  iface_util.c  iface_util.h  input-bluetooth.c  input-bluetooth.h  input-directfb.c  input-directfb.h  input-libinput.c  input-socket.c  input-socket.h  input-tcp.c  input-tcp.h  input.c  input.h  (+58 more)
src/lib/: application.c  application.h  audio.c  audio.h  avbox.h  bluetooth.c  bluetooth.h  btstream.cpp  checkpoint.h  compiler.h  db_util.c  debug.h  delegate.c  delegate.h  dispatch.c  dispatch.h  dvdio.c  dvdio.h  ffmpeg_util.c  ffmpeg_util.h  file_util.c  file_util.h  iface_util.c  iface_util.h  ionice.h  linkedlist.h  log.c  log.h  math_util.h  pipe_util.c  pipe_util.h  proc_util.c  proc_util.h  process.c  process.h  queue.c  queue.h  settings.c  stopwatch.c  stopwatch.h  (+21 more)
src/lib/ui/: input-bluetooth.c  input-directfb.c  input-directfb.h  input-libinput.c  input-libinput.h  input-socket.c  input-socket.h  input-tcp.c  input-tcp.h  input-web.c  input-web.h  input.c  input.h  listview.c  listview.h  mmaldecode.c  mmaldecode.h  player.c  player.h  player_p.h  progressview.c  progressview.h  textview.c  textview.h  video-directfb.c  video-drm.c  video-drm.h  video-drv.h  video-opengl.c  video-opengl.h  video-software.c  video-vc4.c  video-x11.c  video.c  video.h
src/res/deluge/: auth  core.conf
src/res/mediabox/: mediabox.xcf  webremote.html
src/res/mediatomb/: common.js  config.xml  import.js  playlists.js
test/: Makefile.am  test-primitives.c
